@@ -24,8 +24,14 @@
 #ifndef REST_H
 #define REST_H
 
+//Get configured network.
+extern bool rest_network_test(char *uri);
+extern char *rest_network(char *uri, struct http_request *request, struct http_response *response);
+extern void rest_network_destroy(char *response);
+
+//Scan for access points.
 extern bool rest_net_names_test(char *uri);
-extern char *rest_net_names_html(char *uri, struct http_request *request, struct http_response *response);
-extern void rest_net_names_destroy(char *html);
+extern char *rest_net_names(char *uri, struct http_request *request, struct http_response *response);
+extern void rest_net_names_destroy(char *response);
 
 #endif
